--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <!-- СЕКЦИИ, КОТОРЫЕ ВСТАВЛЯЕТ include.js -->
     <div data-include="tpl/header.html"></div>
     <div data-include="tpl/menu.html"></div>
+    <div data-include="tpl/menu-mobile.html"></div>
     <div data-include="tpl/hero.html"></div>
     <div data-include="tpl/corps.html"></div>
     <div data-include="tpl/afisha.html"></div>
