--- a/tpl/excursions.html
+++ b/tpl/excursions.html
@@ -1,149 +1,160 @@
-<section class="w-full">
+<section class="w-full bg-white">
   <div class="px-4 sm:px-6 lg:px-[60px] py-10 sm:py-14 lg:py-[80px]">
-    <!-- Заголовок -->
+
+    <!-- HEADER -->
     <div class="flex items-start justify-between gap-6 mb-10 sm:mb-12">
       <h2 class="font-[Racama] text-[40px] sm:text-[56px] lg:text-[72px] leading-[0.95] tracking-[-0.02em] text-[#24272A]">
         Экскурсии
       </h2>
 
-      <a
-        href="#"
-        class="hidden sm:inline-flex items-center gap-4 border border-[#24272A]
-               px-6 py-4 text-base font-semibold leading-[160%]
-               transition hover:bg-[#24272A] hover:text-white"
-      >
+      <a href="#"
+         class="hidden sm:inline-flex items-center gap-4 border border-[#24272A]
+                px-6 py-4 text-base font-semibold transition
+                hover:bg-[#24272A] hover:text-white">
         Все экскурсии
-        <span class="w-6 h-6">
-          <include src="/assets/svg/arrow-right.svg"></include>
-        </span>
+        <img src="/assets/svg/arrow-right.svg" class="w-6 h-6" alt="">
       </a>
     </div>
 
-    <!-- Фильтр корпусов -->
-    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4 mb-8">
-      <button class="flex items-center gap-4 px-5 py-4 bg-[#FBEAEA] text-left transition hover:opacity-80">
-        <img src="/assets/img/corps-1.png" class="w-10 h-10 object-cover rounded" alt="">
-        <span class="font-semibold text-[#24272A] leading-[140%]">Главный корпус</span>
+    <!-- КОРПУСА -->
+    <div class="mb-8 flex gap-4 overflow-x-auto sm:grid sm:grid-cols-2 lg:grid-cols-4 sm:overflow-visible">
+      <button class="min-w-[260px] flex items-center gap-4 px-5 py-4 bg-[#FBEAEA]">
+        <img src="/assets/img/corps-1.png" class="w-10 h-10 object-cover" alt="">
+        <span class="font-semibold">Главный корпус</span>
       </button>
 
-      <button class="flex items-center gap-4 px-5 py-4 bg-[#EEF0FF] text-left transition hover:opacity-80">
-        <img src="/assets/img/corps-2.png" class="w-10 h-10 object-cover rounded" alt="">
-        <span class="font-semibold text-[#24272A] leading-[140%]">
-          Ризница Троице-Сергиевской Лавры
-        </span>
+      <button class="min-w-[260px] flex items-center gap-4 px-5 py-4 bg-[#EEF0FF]">
+        <img src="/assets/img/corps-2.png" class="w-10 h-10 object-cover" alt="">
+        <span class="font-semibold">Ризница Троице-Сергиевской Лавры</span>
       </button>
 
-      <button class="flex items-center gap-4 px-5 py-4 bg-[#F7F2E9] text-left transition hover:opacity-80">
-        <img src="/assets/img/corps-3.png" class="w-10 h-10 object-cover rounded" alt="">
-        <span class="font-semibold text-[#24272A] leading-[140%]">
-          Музейный комплекс «Конный двор»
-        </span>
+      <button class="min-w-[260px] flex items-center gap-4 px-5 py-4 bg-[#F7F2E9]">
+        <img src="/assets/img/corps-3.png" class="w-10 h-10 object-cover" alt="">
+        <span class="font-semibold">Музейный комплекс «Конный двор»</span>
       </button>
 
-      <button class="flex items-center gap-4 px-5 py-4 bg-[#E7EFEA] text-left transition hover:opacity-80">
-        <img src="/assets/img/corps-4.png" class="w-10 h-10 object-cover rounded" alt="">
-        <span class="font-semibold text-[#24272A] leading-[140%]">
-          Краеведческий корпус
-        </span>
+      <button class="min-w-[260px] flex items-center gap-4 px-5 py-4 bg-[#E7EFEA]">
+        <img src="/assets/img/corps-4.png" class="w-10 h-10 object-cover" alt="">
+        <span class="font-semibold">Краеведческий корпус</span>
       </button>
     </div>
 
-    <!-- Типы экскурсий -->
-    <div class="flex flex-wrap gap-4 mb-10">
-      <label class="flex items-center gap-3 border border-[#DCDEE0] px-5 py-4 cursor-pointer hover:bg-[#F0F1F2]">
+    <!-- ЧЕКБОКСЫ -->
+    <div class="mb-10 flex gap-4 overflow-x-auto sm:flex-wrap">
+
+      <!-- ПУШКИНСКАЯ КАРТА -->
+      <label class="min-w-[240px] flex items-center gap-4 border border-[#DCDEE0] px-4 py-3 cursor-pointer">
+        <input type="checkbox" class="w-5 h-5 accent-[#24272A]">
+        <span class="flex items-center justify-center h-[36px] px-4 bg-[#24272A]">
+          <img src="/assets/img/pushkin-card1.png" alt="Пушкинская карта" class="h-5 w-auto">
+        </span>
+      </label>
+
+      <label class="min-w-[220px] flex items-center gap-3 border border-[#DCDEE0] px-5 py-4 cursor-pointer">
         <input type="checkbox" class="w-5 h-5 accent-[#24272A]">
         <span class="font-semibold">Пенсионеры</span>
       </label>
 
-      <label class="flex items-center gap-3 border border-[#DCDEE0] px-5 py-4 cursor-pointer hover:bg-[#F0F1F2]">
+      <label class="min-w-[220px] flex items-center gap-3 border border-[#DCDEE0] px-5 py-4 cursor-pointer">
         <input type="checkbox" class="w-5 h-5 accent-[#24272A]">
         <span class="font-semibold">Пешеходная</span>
       </label>
 
-      <label class="flex items-center gap-3 border border-[#DCDEE0] px-5 py-4 cursor-pointer hover:bg-[#F0F1F2]">
+      <label class="min-w-[220px] flex items-center gap-3 border border-[#DCDEE0] px-5 py-4 cursor-pointer">
         <input type="checkbox" class="w-5 h-5 accent-[#24272A]">
         <span class="font-semibold">Автобусная</span>
       </label>
     </div>
 
-    <!-- Карточки экскурсий -->
-    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
-      <!-- карточка -->
-      <article class="flex flex-col">
-        <img src="/assets/img/exc-1.jpg" alt="" class="w-full h-[240px] object-cover mb-4">
+    <!-- КАРТОЧКИ -->
+    <div class="flex gap-6 overflow-x-auto snap-x snap-mandatory pb-2
+                sm:grid sm:grid-cols-2 lg:grid-cols-3 sm:overflow-visible">
 
+      <!-- CARD 1 -->
+      <article class="min-w-[280px] sm:min-w-0 flex flex-col snap-start">
+        <img src="/assets/img/exc-1.jpg" class="w-full h-[220px] object-cover mb-4" alt="">
         <div class="flex items-center justify-between mb-2">
-          <span class="font-semibold text-[#24272A]">От 550 ₽ / чел</span>
-          <span class="px-3 py-1 rounded-full bg-[#FBEAEA] text-[#C92E32] text-sm font-semibold">
-            Главный корпус
-          </span>
+          <span class="font-semibold">От 550 ₽ / чел</span>
+          <span class="px-3 py-1 text-sm bg-[#FBEAEA] text-[#C92E32]">Главный корпус</span>
         </div>
-
-        <h3 class="font-semibold text-lg leading-[140%] mb-2">
+        <h3 class="font-semibold text-lg mb-2">
           Экскурсия по выставке «Любовью и единением спасёмся»
         </h3>
-
-        <p class="text-sm text-[#6B7280] leading-[160%]">
-          Тематическая экскурсия, знакомящая с земной жизнью великого Святого
-          и традициями его посмертного почитания.
+        <p class="text-sm text-[#6B7280]">
+          Тематическая экскурсия, знакомящая с земной жизнью великого Святого.
         </p>
       </article>
 
-      <!-- карточка -->
-      <article class="flex flex-col">
-        <img src="/assets/img/exc-2.jpg" alt="" class="w-full h-[240px] object-cover mb-4">
-
+      <!-- CARD 2 -->
+      <article class="min-w-[280px] sm:min-w-0 flex flex-col snap-start">
+        <img src="/assets/img/exc-2.jpg" class="w-full h-[220px] object-cover mb-4" alt="">
         <div class="flex items-center justify-between mb-2">
-          <span class="font-semibold text-[#24272A]">От 550 ₽ / чел</span>
-          <span class="px-3 py-1 rounded-full bg-[#EEF0FF] text-[#7474C2] text-sm font-semibold">
-            Ризница
-          </span>
+          <span class="font-semibold">От 550 ₽ / чел</span>
+          <span class="px-3 py-1 text-sm bg-[#F7F2E9] text-[#A38641]">Конный двор</span>
         </div>
-
-        <h3 class="font-semibold text-lg leading-[140%] mb-2">
+        <h3 class="font-semibold text-lg mb-2">
           Экскурсия по выставке «Любовью и единением спасёмся»
         </h3>
-
-        <p class="text-sm text-[#6B7280] leading-[160%]">
-          Тематическая экскурсия, знакомящая с земной жизнью великого Святого
-          и традициями его посмертного почитания.
-        </p>
+        <p class="text-sm text-[#6B7280]">Тематическая экскурсия музея.</p>
       </article>
 
-      <!-- карточка -->
-      <article class="flex flex-col">
-        <img src="/assets/img/exc-3.jpg" alt="" class="w-full h-[240px] object-cover mb-4">
-
+      <!-- CARD 3 -->
+      <article class="min-w-[280px] sm:min-w-0 flex flex-col snap-start">
+        <img src="/assets/img/exc-3.jpg" class="w-full h-[220px] object-cover mb-4" alt="">
         <div class="flex items-center justify-between mb-2">
-          <span class="font-semibold text-[#24272A]">От 550 ₽ / чел</span>
-          <span class="px-3 py-1 rounded-full bg-[#F7F2E9] text-[#A38641] text-sm font-semibold">
-            Конный двор
-          </span>
+          <span class="font-semibold">От 550 ₽ / чел</span>
+          <span class="px-3 py-1 text-sm bg-[#EEF0FF] text-[#7474C2]">Ризница</span>
         </div>
-
-        <h3 class="font-semibold text-lg leading-[140%] mb-2">
+        <h3 class="font-semibold text-lg mb-2">
           Экскурсия по выставке «Любовью и единением спасёмся»
         </h3>
-
-        <p class="text-sm text-[#6B7280] leading-[160%]">
-          Тематическая экскурсия, знакомящая с земной жизнью великого Святого
-          и традициями его посмертного почитания.
-        </p>
+        <p class="text-sm text-[#6B7280]">Тематическая экскурсия музея.</p>
       </article>
+
+      <!-- CARD 4 -->
+      <article class="min-w-[280px] sm:min-w-0 flex flex-col snap-start">
+        <img src="/assets/img/exc-4.jpg" class="w-full h-[220px] object-cover mb-4" alt="">
+        <div class="flex items-center justify-between mb-2">
+          <span class="font-semibold">От 550 ₽ / чел</span>
+          <span class="px-3 py-1 text-sm bg-[#FBEAEA] text-[#C92E32]">Главный корпус</span>
+        </div>
+        <h3 class="font-semibold text-lg mb-2">Экскурсия по выставке</h3>
+        <p class="text-sm text-[#6B7280]">Описание экскурсии.</p>
+      </article>
+
+      <!-- CARD 5 -->
+      <article class="min-w-[280px] sm:min-w-0 flex flex-col snap-start">
+        <img src="/assets/img/exc-5.jpg" class="w-full h-[220px] object-cover mb-4" alt="">
+        <div class="flex items-center justify-between mb-2">
+          <span class="font-semibold">От 550 ₽ / чел</span>
+          <span class="px-3 py-1 text-sm bg-[#FBEAEA] text-[#C92E32]">Главный корпус</span>
+        </div>
+        <h3 class="font-semibold text-lg mb-2">Экскурсия по выставке</h3>
+        <p class="text-sm text-[#6B7280]">Описание экскурсии.</p>
+      </article>
+
+      <!-- CARD 6 -->
+      <article class="min-w-[280px] sm:min-w-0 flex flex-col snap-start">
+        <img src="/assets/img/exc-6.jpg" class="w-full h-[220px] object-cover mb-4" alt="">
+        <div class="flex items-center justify-between mb-2">
+          <span class="font-semibold">От 550 ₽ / чел</span>
+          <span class="px-3 py-1 text-sm bg-[#F7F2E9] text-[#A38641]">Конный двор</span>
+        </div>
+        <h3 class="font-semibold text-lg mb-2">Экскурсия по выставке</h3>
+        <p class="text-sm text-[#6B7280]">Описание экскурсии.</p>
+      </article>
+
     </div>
 
-    <!-- мобильная кнопка -->
+    <!-- MOBILE BUTTON -->
     <div class="mt-10 sm:hidden">
-      <a
-        href="#"
-        class="flex items-center justify-center gap-4 border border-[#24272A]
-               px-6 py-4 text-base font-semibold leading-[160%]"
-      >
+      <a href="#"
+         class="flex items-center justify-center gap-4 border border-[#24272A]
+                px-6 py-4 text-base font-semibold">
         Все экскурсии
-        <span class="w-6 h-6">
-          <include src="/assets/svg/arrow-right.svg"></include>
-        </span>
+        <img src="/assets/svg/arrow-right.svg" class="w-6 h-6" alt="">
       </a>
     </div>
+
   </div>
 </section>
